# polyskills

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: linting.yml  publish.yml  security.yml  tests.yml
extensions/.claude-plugin/: plugin.json
extensions/.codex-plugin/: plugin.json
extensions/agents/: README.md
extensions/agents/python/: AGENT.md  debugger.md  optimization.md  planning.md  python-coding.md  python-debugger.md  python-optimization.md  python-planning.md  python-reviewer.md  python-security.md  python-testing.md  reviewer.md  security.md  testing.md
extensions/agents/python-code-debugger/: AGENT.md
extensions/agents/python-code-optimization/: AGENT.md
extensions/agents/python-code-planning/: AGENT.md
extensions/agents/python-code-reviewer/: AGENT.md
extensions/skills/: README.md
extensions/skills/git-commiter/: SKILL.md
extensions/skills/god-mode/: SKILL.md
extensions/skills/humanize-text/: SKILL.md
polyskills/: __init__.py  cli.py
polyskills/apps/: tools.py
polyskills/database/: __init__.py  engine.py  models.py  paths.py  tracker.py
polyskills/db/: __init__.py  paths.py  schema.py  tracker.py
polyskills/error/: __init__.py  exceptions.py
polyskills/extensions/: __init__.py
polyskills/remote/: __init__.py  sources.py
polyskills/tests/: __init__.py  __main__.py  base.py  test_cli.py  test_database.py  test_remote_sources.py  test_security.py  test_skill_install.py  test_tracker.py
(+8 files in other folders)
