[build-system]
requires = [
    "setuptools>=82.0",
    "wheel>=0.47"
]
build-backend = "setuptools.build_meta"

[project]
name = "polyskills"
dynamic = ["version"]
description = "A Python CLI Tool for Skills Management"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "ZenithClown", email = "dpramanik.official@gmail.com"}
]

keywords = [
    "skills", "anthropic", "claude", "codex", "antigravity"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31",
    "packaging>=23.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
polyskills = "polyskills.cli:main"

[project.urls]
Homepage = "https://github.com/PyUtility/polyskills"
Repository = "https://github.com/PyUtility/polyskills"
Issues = "https://github.com/PyUtility/polyskills/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "polyskills.__version__"}
